[RF] Fix committee header image bug on mobile

--- a/src/assets/stylesheets/scss/committee.scss
+++ b/src/assets/stylesheets/scss/committee.scss
@@ -71,7 +71,7 @@
 .header-banner {
 	background: url('../../images/photos/committee-header.jpg') center center no-repeat;
 	background-size: cover;
-	background-attachment: fixed;
+	background-attachment: scroll;
 	height: 300px;
 	width: 100%;
 }
